Fix user notifications bg on mobile.

--- a/scss/partials/_user_notifications.scss
+++ b/scss/partials/_user_notifications.scss
@@ -177,7 +177,7 @@ div.user-notifications {
         background-color: var(--background-color);
 
         @include mobile() {
-          background-color: white;
+          background-color: var(--mobile-background-color);
           border-top: 1px solid var(--divider-line);
 
           &:first-child {
